--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
 	<meta charset="utf-8">
 
-	<title> DippiGiphy </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title> Dips Giphy </title>
 
 	<!-- jQuery CDN -->
 	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
@@ -22,6 +24,10 @@
 
 </head>
 <body>
+
+	<audio autoplay loop>
+  	<source src="assets/music/majorloveaudio.mp3" type="audio/mp3" loop="loop">
+	</audio>
 
 	<div class= "container" id = "buttons-view"></div>
 
